tests/should_fail/two-plus-two.stahl
module main
  two-plus-two-is-five

def two-plus-two-is-five (Eq (plus-Nat 2 2) 5)
  refl _ _
